feat: builds Docker image

--- a/pythonProject/Dockerfile
+++ b/pythonProject/Dockerfile
@@ -6,8 +6,8 @@ ADD dashboard.py .
 ADD database.py .
 ADD database_connection.py .
 
+# installing the requirements for the python environment
 COPY requirements.txt .
-
 RUN pip install --no-cache-dir -r requirements.txt
 
-CMD ["python", "dashboard.py"]
+CMD ["python", "./dashboard.py"]
