chore: changed the format of the files

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 loaning-system/__pycache__
 loaning-system/.venv
 learning-langchains/__pycache__
-learning-langchains/.venv
+learning-langchains/venv/
+learning-langchains/.env
