feat: compressed code

--- a/loaning-system/Dockerfile
+++ b/loaning-system/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.9
 WORKDIR /application
 # adding the python script
 ADD dashboard.py .
-ADD application/ ./application
+ADD app/ ./app
 # installing dependencies
 COPY requirements.txt /code/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
