--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ virtual-assistant/.langchain.db
 virtual-assistant/logs/
 virtual-assistant/langflow.db
 loaning-system/app/__pycache__
+original-datasources/
