--- a/loaning-system/Dockerfile
+++ b/loaning-system/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /application
 # adding the python script
 ADD dashboard.py .
 ADD app/ ./app
+ADD templates/ ./templates
 # installing dependencies
 COPY requirements.txt /code/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
