--- a/virtual-assistant/requirements.txt
+++ b/virtual-assistant/requirements.txt
@@ -1,6 +1,7 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
 anyio==3.7.0
+arrow==1.2.3
 async-timeout==4.0.2
 attrs==23.1.0
 Authlib==1.2.1
@@ -65,6 +66,7 @@ iniconfig==2.0.0
 itsdangerous==2.1.2
 jaraco.context==4.3.0
 Jinja2==3.1.2
+jinja2-time==0.2.0
 joblib==1.2.0
 kiwisolver==1.4.4
 langchain==0.0.74
@@ -72,6 +74,7 @@ langcodes==3.3.0
 lockfile==0.12.2
 loguru==0.7.0
 lxml==4.9.2
+make==0.1.6.post2
 manifest-ml==0.0.1
 MarkupSafe==2.1.2
 marshmallow==3.19.0
