--- a/loaning-system/Dockerfile
+++ b/loaning-system/Dockerfile
@@ -1,12 +1,11 @@
-FROM python:3.9
+FROM python:3.11
 
-WORKDIR /application
 # adding the python script
 ADD dashboard.py .
 ADD app/ ./app
 ADD templates/ ./templates
 # installing dependencies
-COPY requirements.txt /code/requirements.txt
-RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
+COPY requirements.txt ./requirements.txt
+RUN pip install --no-cache-dir --upgrade -r ./requirements.txt
 
 CMD ["python", "./dashboard.py"]
