feat: no need to run the dockerfile anymore

--- a/loaning-system/docker-compose.yml
+++ b/loaning-system/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
-  dashboard:
-    image: dashboard-image:latest
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
       - ./data:/data
     ports:
