feat: exposed the port

--- a/loaning-system/Dockerfile
+++ b/loaning-system/Dockerfile
@@ -7,5 +7,6 @@ ADD templates/ ./templates
 # installing dependencies
 COPY requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir --upgrade -r ./requirements.txt
-
+# exposing the port we need
+EXPOSE 8050
 CMD ["python", "./dashboard.py"]
